    allowing the use of proper accents in foreign words and names.
    Code and data have not changed because of this.
    (Thanks to Garrett Wollman and Ian Abbott for helping to debug this.)

    Non-HTML documentation and commentary now use plain-text URLs instead of
    HTML insertions.  (Thanks to a suggestion by Steffen "Daode" Nurpmeso.)


Release 2014e - 2014-06-12 21:53:52 -0700

  Changes affecting near-future time stamps

    Egypt's 2014 Ramadan-based transitions are June 26 and July 31 at 24:00.
    (Thanks to Imed Chihi.)  Guess that from 2015 on Egypt will temporarily
    switch to standard time at 24:00 the last Thursday before Ramadan, and
    back to DST at 00:00 the first Friday after Ramadan.

    Similarly, Morocco's are June 28 at 03:00 and August 2 at 02:00.  (Thanks
    to Milamber Space Network.)  Guess that from 2015 on Morocco will
    temporarily switch to standard time at 03:00 the last Saturday before
    Ramadan, and back to DST at 02:00 the first Saturday after Ramadan.

  Changes affecting past time stamps

    The abbreviation "MSM" (Moscow Midsummer Time) is now used instead of
    "MSD" for Moscow's double daylight time in summer 1921.  Also, a typo
    "VLASST" has been repaired to be "VLAST" for Vladivostok summer time
    in 1991.  (Thanks to Hank W. for reporting the problems.)

  Changes affecting commentary

    tz-link.htm now cites RFC 7265 for jCal, mentions PTP and the
    draft CalDAV extension, updates URLs for TSP, TZInfo, IATA, and
    removes stale pointers to World Time Explorer and WORLDTIME.


Release 2014d - 2014-05-27 21:34:40 -0700

  Changes affecting code

    zic no longer generates files containing time stamps before the Big Bang.
    This works around GNOME bug 730332
    <https://bugzilla.gnome.org/show_bug.cgi?id=730332>.
    (Thanks to Leonardo Chiquitto for reporting the bug, and to
    Arthur David Olson and James Cloos for suggesting improvements to the fix.)

  Changes affecting documentation
