@@ -8,7 +8,7 @@
 <meta http-equiv="Content-type" content='text/html; charset="US-ASCII"'>
 <meta name="DC.Creator" content="Eggert, Paul">
 <meta name="DC.Contributor" content="Olson, Arthur David">
-<meta name="DC.Date" content="2014-06-19">
+<meta name="DC.Date" content="2014-06-25">
 <meta name="DC.Description"
  content="Sources of information about time zones and daylight saving time">
 <meta name="DC.Identifier" content="http://cs.ucla.edu/~eggert/tz/tz-link.htm">
@@ -368,9 +368,8 @@ and public holidays in several hundred cities around the world.</li>
 is another time zone database.</li>
 <li><a href="http://tycho.usno.navy.mil/tzones.html">World Time Zones</a>
 contains data from the Time Service Department of the
-<abbr>US</abbr> Naval Observatory, used as the source
-for the <code>usno*</code> files in the <code>tz</code> distribution.</li>
-<li>The <a href="http://iata.org/ps/publications/SSIM.htm">Standard
+<abbr>US</abbr> Naval Observatory.</li>
+<li>The <a href="http://www.iata.org/publications/Pages/ssim.aspx">Standard
 Schedules Information Manual</a> of the
 <a href="http://iata.org/index.htm">International Air Transport
 Association</a>
