@@ -1,109 +1,0 @@
-# From Arthur David Olson (1989-01-19):
-#
-# Here's some United States Naval Observatory time zone data from
-# February 1988.  It's here mostly to convince you that the USNO has indeed
-# been updating its files (see its 1989 data elsewhere).
-#
-ANDORRA             1 H AHEAD OF UTC
-ARGENTINA           3 H BEHIND   UTC
-BRASIL   WEST       5 H BEHIND UTC        (CRUZEIRO DO SUL)
-BRASIL   CENTRAL    4 H BEHIND UTC              (MANAUS)
-BRASIL   EAST       3 H BEHIND UTC   COASTAL STATES, RIO, SP, BRASILIA
-BRASIL              2 H BEHIND UTC   ATLANTIC ISLANDS
-BRAZIL              5 H BEHIND UTC   WEST (CRUZEIRO DO SUL)
-BRAZIL              4 H BEHIND UTC   CENTRAL    (MANAUS)
-BRAZIL              3 H BEHIND UTC   COASTAL STATES, RIO, SP, BRASILIA
-BRAZIL              3 H BEHIND UTC   FOR MOST MAJOR AIRPORTS.
-BRAZIL              2 H BEHIND UTC   ATLANTIC ISLANDS
-BULGARIA            2 H AHEAD OF UTC WINTER
-BULGARIA            3 H AHEAD OF UTC SUMMER MAR31 - SEP 85, 0100 LOCAL
-CHINA               8 H AHEAD OF UTC; ALL OF CHINA, INCL TAIWAN
-CUBA                5 H BEHIND UTC IN WINTER
-CUBA                4 H BEHIND UTC MAY 8 - OCT 8
-CYPRUS              2 H AHEAD UTC IN WINTER
-CYPRUS              3 H AHEAD UTC MAR 25 - SEP 30
-DENMARK             1 H AHEAD UTC IN WINTER
-DENMARK             2 H AHEAD UTC MAR 31 - SEP 30  , 0200 LOCAL
-DENMK. FAEROE IS    1 H AHEAD UTC MAR 31 - SEP 30  , 0200 LOCAL
-EGYPT               2 H AHEAD UTC
-EGYPT               3 H AHEAD UTC SUMMER (AFTER RAMADAN)
-ENGLAND             ON UTC IN WINTER; WALES, SCOTLAND, N.I., CH.IS.
-ENGLAND             1 H AHEAD OF UTC; SUMMER TIL 28 OCT 0200 LOCAL
-FINLAND             2 H AHEAD OF UTC IN WINTER
-FINLAND             3 H AHEAD OF UTC MAR 25 - SEP 30
-FRANCE              1 H AHEAD OF UTC IN WINTER
-FRANCE              2 H AHEAD OF UTC MAR 31 - SEP 30 , 0100 LOCAL
-GREECE              2 H AHEAD OF UTC IN WINTER
-GREECE              3 H AHEAD OF UTC IN SUMMER EFF. 31MAR85 02/03 LOCAL
-GREECE              3 H AHEAD OF UTC MAR 25 - SEP 30
-GREENLAND           4 H BEHIND UTC  IN THULE AIRBASE YEAR ROUND
-GREENLAND           3 H BEHIND UTC  IN WINTER AT SONDRESTROM
-GREENLAND           2 H BEHIND UTC  30 MAR - 30 SEP 2200 LOCAL AT -"-
-GREENLAND           2 H BEHIND UTC  AROUND SCORESBY SUND
-ICELAND             ON UTC
-IRAN                3.5H AHEAD OF UTC
-IRELAND             ON UTC IN WINTER
-IRELAND             1 H AHEAD OF UTC MAR 31 - OCT 23  0200 LOCAL
-ITALY               1 H AHEAD OF UTC IN WINTER
-ITALY               2 H AHEAD OF UTC MAR 31 - SEP 30, 0030 LOCAL
-JAMAICA             5 H BEHIND UTC IN WINTER
-JAMAICA             4 H BEHIND UTC APR 29 - OCT 29
-LIBYA               2 H AHEAD OF UTC
-MEXICO BAJA CAL N   8 H BEHIND UTC IN WINTER; NORTH BAJA CAL, TIJUANA
-MEXICO BAJA CAL N   7 H BEHIND UTC APR 29 - OCT 29
-MEXICO BAJA CAL S   7 H BEHIND UTC ALL YEAR; MAZATLAN
-MEXICO CENTRAL      6 H BEHIND UTC ALL YEAR; MEXICO CITY
-MONACO              1 H AHEAD UTC IN WINTER
-MONACO              2 H AHEAD UTC MAR 25 - SEP30
-PARAGUAY            4 H BEHIND UTC IN WINTER
-PARAGUAY            3 H BEHIND UTC SEP 30 - MAR 30
-POLAND              1 H AHEAD OF UTC IN WINTER
-POLAND              2 H AHEAD OF UTC MAR 24 - SEP     0200 LOCAL
-PORTUGAL            ON UTC IN WINTER
-PORTUGAL            1 H AHEAD OF UTC IN SUMMER MAR 31 - SEP 29   0100 LOCAL
-PORTUGAL AZORES     1 H BEHIND UTC IN WINTER
-PORTUGAL AZORES     ON UTC IN SUMMER MAR 31 - SEP 29
-PORTUGAL MADEIRA    ON UTC ALL YEAR;
-ROMANIA             2 H AHEAD OF UTC IN WINTER
-ROMANIA             3 H AHEAD OF UTC APR 3 - SEP 24
-SCOTLAND            SEE ENGLAND
-SWITZERLAND         1 H AHEAD OF UTC IN WINTER
-SWITZERLAND         2 H AHEAD OF UTC MAR 31 - SEP 30  0200 LOCAL
-TURKEY              3 H AHEAD OF UTC
-USA   EASTERN       5 H BEHIND UTC IN WINTER; NEW YORK, WASHINGTON
-USA   EASTERN       4 H BEHIND UTC APR 29 - OCT 29
-USA   CENTRAL       6 H BEHIND UTC IN WINTER; CHICAGO, HOUSTON
-USA   CENTRAL       5 H BEHIND UTC APR 29 - OCT 29
-USA   MOUNTAIN      7 H BEHIND UTC IN WINTER; DENVER
-USA   MOUNTAIN      6 H BEHIND UTC APR 29 - OCT 29
-USA   PACIFIC       8 H BEHIND UTC IN WINTER; L.A., SAN FRANCISCO
-USA   PACIFIC       7 H BEHIND UTC APR 29 - OCT 29
-USA   ALASKA STD    9 H BEHIND UTC IN WINTER; MOST OF ALASKA     (AKST)
-USA   ALASKA STD    8 H BEHIND UTC APR 29 - OCT 29               (AKDT)
-USA   ALEUTIAN     10 H BEHIND UTC IN WINTER; ISLANDS WEST OF 170W
-USA   - " -         9 H BEHIND UTC APR 29 - OCT 29
-USA   HAWAII       10 H BEHIND UTC ALL YEAR;
-USA   BERING       11 H BEHIND UTC ALL YEAR; SAMOA, MIDWAY
-USSR WEST EUROP     3 H AHEAD OF UTC IN WINTER; LENINGRAD, MOSCOW
-USSR WEST EUROP     4 H AHEAD OF UTC APR 1 - SEP 30
-USSR CENTRAL EUR    4 H AHEAD OF UTC IN WINTER; ROSTOV, BAKU
-USSR CENTRAL EUR    5 H AHEAD OF UTC APR 1 - SEP 30
-USSR EAST EUROP     5 H AHEAD OF UTC IN WINTER; SVERDLOVSK
-USSR EAST EUROP     6 H AHEAD OF UTC APR 1 - SEP 30
-USSR WEST SIBERIAN  6 H AHEAD OF UTC IN WINTER; TASHKENT, ALMA ATA
-USSR WEST SIBERIAN  7 H AHEAD OF UTC APR 1 - SEP 30
-USSR WEST-CENTRAL   7 H AHEAD OF UTC IN WINTER; NOVOSIBIRSK
-USSR WEST-CENTRAL   8 H AHEAD OF UTC APR 1 - SEP 30
-USSR WEST-CENTRAL   8 H AHEAD OF UTC IN WINTER; IRKUTSK
-USSR WEST-CENTRAL   9 H AHEAD OF UTC APR 1 - SEP 30
-USSR CENTRAL SIB    9 H AHEAD OF UTC IN WINTER; YAKUTSK
-USSR CENTRAL SIB   10 H AHEAD OF UTC APR 1 - SEP 30
-USSR CENTRAL SIB   10 H AHEAD OF UTC IN WINTER; VLADIVOSTOK
-USSR CENTRAL SIB   11 H AHEAD OF UTC APR 1 - SEP 30
-USSR EAST SIBERIA  11 H AHEAD OF UTC IN WINTER; MAGADAN
-USSR EAST SIBERIA  12 H AHEAD OF UTC APR 1 - SEP 30
-USSR EAST SIBERIA  12 H AHEAD OF UTC IN WINTER; PETROPAVLOVSK
-USSR EAST SIBERIA  13 H AHEAD OF UTC APR 1 - SEP 30
-USSR EAST SIBERIA  13 H AHEAD OF UTC IN WINTER; UELEN
-USSR EAST SIBERIA  14 H AHEAD OF UTC APR 1 - SEP 30
-WALES               SEE ENGLAND
