@@ -25,6 +25,10 @@ Unreleased, experimental changes
     Non-HTML documentation and commentary now use plain-text URLs instead of
     HTML insertions.  (Thanks to a suggestion by Steffen "Daode" Nurpmeso.)
 
+    The files usno1988, usno1989, usno1989a, usno1995, usno1997, and usno1998
+    have been removed.  These obsolescent US Naval Observatory entries were no
+    longer helpful for maintenance.  (Thanks to Tim Parenti for the suggestion.)
+
 
 Release 2014e - 2014-06-12 21:53:52 -0700
 
